# jini_floor_plan

./: .gitignore  Cargo.toml  __param00.toml  a  b  h  k  param01.toml  param02.toml  param03.toml  params.toml  t  test
examples/: 0_shapeA.rs  1_shapeB.rs  2_shapeC.rs  3_duck.py  3_duck.rs  3_duck_v02.py  demo_voronoi.rs  demo_voronoi_gif.rs
optimize/: optimize.py  optimize.toml
python/: floorplan_optimizer.py  houdini_stage_node.py
scratch/: generate_pyo3_config.py  pyo3_houdini.cfg  pyo3_script_test  pyo3_script_test.rs  script.py  test_getters_setters.py
scratch/del-fem-core-0.1.6/: .cargo_vcs_info.json  Cargo.toml
scratch/del-geo-core-0.1.34/: .cargo_vcs_info.json  Cargo.toml
scratch/del-geo-nalgebra-0.1.33/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
scratch/del-msh-core-0.1.39/: Cargo.toml
src/: delaunay.rs  lib.rs  loss_topo.rs  python_bindings.rs  voronoi.rs
tests/: voronoi_degenerate.rs
