[package]
name = "floorplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python-bindings = ["pyo3"]

[dependencies]
rand = "=0.8.5"
nalgebra = "=0.33.0"
anyhow = "=1.0.86"
rand_chacha = "=0.3.1"
arrayref = "=0.3.8"
candle-core = "=0.6.0"
candle-nn = "=0.6.0"
half = "=2.4.0"
del-geo-core = "=0.1.29"
del-geo-nalgebra = "=0.1.29"
del-msh-core = "=0.1.34"
del-canvas-core = "=0.1.1"
del-candle = "=0.1.0"
pyo3 = { version = "=0.21.2", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"


[patch.crates-io]
del-msh-core = { path = "vendor/del-msh-core" }
del-canvas-core = { path = "vendor/del-canvas-core" }


